{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 69,
  "lineage": "067817ea-13e0-a221-05ad-df68022c5b18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354568764032:internet-gateway/igw-0365dee46f9f2ad53",
            "id": "igw-0365dee46f9f2ad53",
            "owner_id": "354568764032",
            "tags": {
              "Name": "cloudpilot-prod-igw"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-igw"
            },
            "vpc_id": "vpc-079041486ab1f5251"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354568764032:route-table/rtb-0272c08600af64a86",
            "id": "rtb-0272c08600af64a86",
            "owner_id": "354568764032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0365dee46f9f2ad53",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudpilot-prod-public-rt"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079041486ab1f5251"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354568764032:security-group/sg-081928155c54b6970",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081928155c54b6970",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudpilot-prod-web-sg",
            "name_prefix": "",
            "owner_id": "354568764032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudpilot-prod-web-sg"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-079041486ab1f5251"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354568764032:subnet/subnet-08a6cc38563b0161d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a6cc38563b0161d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354568764032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudpilot-prod-public-1"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-public-1"
            },
            "vpc_id": "vpc-079041486ab1f5251"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354568764032:subnet/subnet-0e29e2683e37aa795",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e29e2683e37aa795",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "354568764032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudpilot-prod-public-2"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-public-2"
            },
            "vpc_id": "vpc-079041486ab1f5251"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:354568764032:vpc/vpc-079041486ab1f5251",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077c3a444d14c3b4e",
            "default_route_table_id": "rtb-03f8ba49c05046e3a",
            "default_security_group_id": "sg-0df4e200b26fa808e",
            "dhcp_options_id": "dopt-09f9a323336f060ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079041486ab1f5251",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f8ba49c05046e3a",
            "owner_id": "354568764032",
            "tags": {
              "Name": "cloudpilot-prod-vpc"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:354568764032:loadbalancer/app/cloudpilot-prod-alb/cc4a7ef05e172e7d",
            "arn_suffix": "app/cloudpilot-prod-alb/cc4a7ef05e172e7d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudpilot-prod-alb-1876333440.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:354568764032:loadbalancer/app/cloudpilot-prod-alb/cc4a7ef05e172e7d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudpilot-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-081928155c54b6970"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a6cc38563b0161d"
              },
              {
                "subnet_id": "subnet-0e29e2683e37aa795"
              }
            ],
            "subnets": [
              "subnet-08a6cc38563b0161d",
              "subnet-0e29e2683e37aa795"
            ],
            "tags": {
              "Name": "cloudpilot-prod-alb"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-alb"
            },
            "vpc_id": "vpc-079041486ab1f5251",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:354568764032:listener/app/cloudpilot-prod-alb/cc4a7ef05e172e7d/4c63a76f3f0baf9a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:354568764032:targetgroup/cloudpilot-prod-tg/81d6b0a283ed77a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:354568764032:listener/app/cloudpilot-prod-alb/cc4a7ef05e172e7d/4c63a76f3f0baf9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:354568764032:loadbalancer/app/cloudpilot-prod-alb/cc4a7ef05e172e7d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:354568764032:targetgroup/cloudpilot-prod-tg/81d6b0a283ed77a8",
            "arn_suffix": "targetgroup/cloudpilot-prod-tg/81d6b0a283ed77a8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:354568764032:targetgroup/cloudpilot-prod-tg/81d6b0a283ed77a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudpilot-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloudpilot-prod-tg"
            },
            "tags_all": {
              "Name": "cloudpilot-prod-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079041486ab1f5251"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}